2004-11-18  Ben Elliston  <bje@au.ibm.com>

	* cgraphunit.c: Replace "it's" with "its" and fix a typo.

2004-11-18  Ben Elliston  <bje@au.ibm.com>

	* cgraph.h: Replace "it's" with "its" throughout.

2004-11-18  Ben Elliston  <bje@au.ibm.com>

	* doc/rtl.texi (Flags): Grammar fix.

2004-11-17  Kazu Hirata  <kazu@cs.umass.edu>

	* expmed.c (alg_code): Add alg_unknown.
	(alg_hash_entry): New.
	(NUM_ALG_HASH_ENTRIES): Likewise.
	(alg_hash): Likewise.
	(synth_mult): Cache the result into alg_hash.

2004-11-17  Zack Weinberg  <zack@codesourcery.com>

	* config/rs6000/t-darwin: Augment SHLIB_MAPFILES with
	config/rs6000/libgcc-ppc64.ver.

2004-11-17  Kazu Hirata  <kazu@cs.umass.edu>

	* cfgrtl.c (rtl_verify_flow_info): Don't use INSN_P when
	checking if an unconditional return is followed by a barrier.

	* jump.c (condjump_p): Remove unreachable code.

	* basic-block.h, c-common.h, df.h, expr.h, output.h, rtl.h,
	tree-chrec.h, tree-flow.h, tree-scalar-evolution.h,
	tree-ssa-live.h, tree.h: Remove unused prototypes.

2004-11-17  Jeff Law  <law@redhat.com>

	* tree-cfg.c (edge_to_cases): Renamed from edge_to_case_leader.
	(edge_to_cases_elt): Renamed from edge_to_case_leader.
	(edge_to_cases_hash): Renamed from edge_to_case_leader_hash.
	(edge_to_cases_eq): Renamed from edge_to_case_leader_eq.
	(edge_to_cases_cleanup, recording_case_labels_p): New functions.
	(get_cases_for_edge): New function.
	(start_recording_case_labels, end_recording_case_labels): Similarly.
	(record_switch_edge): Don't muck with the CASE_LABEL.  Instead
	chain equivalent CASE_LABEL_EXPRs together.
	(get_case_leader_for_edge, get_case_leader_for_edge_hash): Kill.
	(make_switch_expr_edges): Do not record edge/cases here.
	(cleanup_tree_cfg): Record cases around the call to thread_jumps.
	(split_critical_edges): Record cases around the edge splitting code.
	(cleanup_dead_labels): Use CASE_LABEL again.
	(tree_redirect_edge_and_branch): If we have a mapping from edge